# bibliography

./: .coveragerc  .envrc  .gitignore  .isort.cfg  .travis.yml  DEVELOPMENT.md  Makefile  README.md  bibliography.py  pylintrc  pyproject.toml  sample.bib  test_bibliography.py
.circleci/: config.yml
.github/workflows/: build.yaml
